// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker TimePicker baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="demos t-time-picker"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <div
    class="demos t-time-picker"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker TimePicker clearableVue demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <h3>
    具备清空按钮
  </h3>
   
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <h3>
    禁止清空按钮
  </h3>
   
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker TimePicker disabledVue demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <h3>
    禁用整个选择器
  </h3>
   
  <br />
   
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-disabled t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          disabled="disabled"
          placeholder=""
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <br />
   
  <br />
   
  <h3>
    禁用指定时间
  </h3>
   
  <br />
   
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap t-select-input--empty"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="选择时间"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker TimePicker formatVue demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="demos t-time-picker"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker TimePicker hideClearButtonVue demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <h3>
    具备清空按钮
  </h3>
   
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <h3>
    禁止清空按钮
  </h3>
   
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap t-select-input--empty"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="选择时间"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker TimePicker hmVue demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <h3>
    时分选择
  </h3>
   
  <br />
   
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap t-select-input--empty"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="选择时间"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <br />
   
  <br />
   
  <h3>
    毫秒选择
  </h3>
   
  <br />
   
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker TimePicker hmsVue demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker TimePicker keyboardVue demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <h3>
    允许输入
  </h3>
   
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          type="text"
          unselectable="off"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
   
  <h3>
    禁止输入
  </h3>
   
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker TimePicker rangeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="demos t-time-range-picker"
  >
    <div
      class="t-range-input-popup"
    >
      <div
        class="t-range-input"
      >
        <div
          class="t-range-input__inner"
        >
          <div
            class="t-input__wrap t-range-input__inner-left"
          >
            <div
              class="t-input t-size-m t-is-default"
            >
              <input
                autocomplete=""
                class="t-input__inner"
                placeholder="选择时间"
                type="text"
                unselectable="off"
              />
            </div>
          </div>
          <div
            class="t-range-input__inner-separator"
          >
            -
          </div>
          <div
            class="t-input__wrap t-range-input__inner-right"
          >
            <div
              class="t-input t-size-m t-is-default"
            >
              <input
                autocomplete=""
                class="t-input__inner"
                placeholder="选择时间"
                type="text"
                unselectable="off"
              />
            </div>
          </div>
          <span
            class="t-range-input__suffix t-range-input__suffix-icon"
          >
            <svg
              class="t-icon t-icon-time"
              fill="none"
              height="1em"
              viewBox="0 0 16 16"
              width="1em"
            >
              <path
                d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
                fill="currentColor"
                fill-opacity="0.9"
              />
              <path
                d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
                fill="currentColor"
                fill-opacity="0.9"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker TimePicker showStepsVue demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap t-select-input--empty"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="选择时间"
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker TimePicker stepVue demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker TimePicker twelveHourMeridianVue demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker TimePicker twelveHourVue demo works fine 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-time-picker"
  >
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
      >
        <div
          class="t-input__prefix"
        />
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder=""
          readonly="readonly"
          type="text"
          unselectable="on"
        />
        <span
          class="t-input__suffix t-input__suffix-icon"
        >
          <svg
            class="t-icon t-icon-time"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.5 4v4.39L10 11l.7-.7-2.2-2.33V4h-1z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M15 8A7 7 0 111 8a7 7 0 0114 0zm-1 0A6 6 0 102 8a6 6 0 0012 0z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
